# yt-sample-gen

./: .gitignore  README.md  package-lock.json  package.json
backend/: app.py  generate_files.py  init_celery.py  logger.py  make_celery.py  package-lock.json  pyproject.toml  routes.py  sample_entry_data.json  words.txt
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  const.js  index.css  requests.js  store.js  utils.js
frontend/src/components/: CustomSampleView.jsx  GenerateSamplesButton.jsx  Header.jsx  LoadingSampleView.jsx  RandomSampleView.jsx  Sample.jsx  SampleView.jsx  SearchTermsDialog.jsx  TextButton.jsx  VolumeSlider.jsx  WordsModal.jsx
frontend/src/hooks/: useAudioFile.js  useAudioZip.js  useHowler.js  useIndicator.js  useSamples.js
