[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend for the youtube random sample generator"
authors = ["Your Name <you@example.com>"]
license = "n"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydub = "^0.25.1"
yt-dlp = "^2023.11.16"
flask = "^3.0.0"
isodate = "^0.6.1"
flask-cors = "^4.0.0"
celery = "^5.3.6"
redis = "^5.0.1"
flower = "^2.0.1"
gevent = "^23.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
